--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -38,7 +38,7 @@
         <ol>
           <h3 class="cita">Oración</h3>
           <li class="li"><a href="./ecclesia/lectio/index.html">LECTIO DIVINA</a></li>
-          <li class="li"><a href="./ecclesia/oracion/oracion.html">ORACIÓN</a></li>
+          <li class="li"><a href="./ecclesia/oracion/index.html">ORACIÓN</a></li>
           <li class="li"><a href="./ecclesia/discretio/index.html">DISCRETIO</a></li>
           <li class="li"><a href="./ecclesia/liturgia/index.html">LITURGIA</a></li>
 <h3 class="cita">Formación</h3>
