--- a/ecclesia/oracion/compendioOracion.html
+++ b/ecclesia/oracion/compendioOracion.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../styles/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/style.css" />
     <title>ORACIÓN</title>
   </head>
 
@@ -12,40 +11,37 @@
     <p id="alInicio" class="principio"></p>
     <header>
       <div class="container">
-        <p class="logo"> CRISTO SALVADOR</p>
+        <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
+        <a href="#alInicio"
+          ><img src="../../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"
+        /></a>
         <a href="./index.html" class="nombre">INICIO </a>
       </div>
-    </header> <br><br>
+    </header>
+    <br /><br />
     <!-- *************************************************************************** -->
     <h1 class="init">ORACIÓN</h1>
-       <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</h3>
+    <h3 class="cita">
+      "No aceptes como Verdad lo que no proviene del Amor, <br />
+      ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
+    </h3>
 
- 
     <!-- ENLACE A PÁGINAS **********************************************************-->
-<section id="libros">
-
-  <div>
-    <H2 class="titulo">ENLACES A TEMAS</H2>
-    <ol>
-      <li class="li"><a href="../oracion/01Estacion.html">ESTACIÓN 1</a></li>
-      <li class="li"><a href="../oracion/02Estacion.html">ESTACIÓN 2</a></li>
-      <li class="li"><a href="../oracion/03Estacion.html">ESTACIÓN 3</a></li>
-
-    </ol>
-  </div>
-</section>
+    <section id="libros">
+      <div>
+        <h2 class="titulo">ENLACES A TEMAS</h2>
+        <ol>
+          <li class="li">
+            <a href="./01Estacion.html">ESTACIÓN 1</a>
+          </li>
+          <li class="li"><a href="./02Estacion.html">ESTACIÓN 2</a></li>
+          <li class="li"><a href="./03Estacion.html">ESTACIÓN 3</a></li>
+        </ol>
+      </div>
+    </section>
     <!-- ************************************************************ -->
-   <section id="01">
-
-   </section>
+    <section id="01"></section>
     <!-- ************************************************************ -->
-    
-    
-
-
-    </body>
-  
-    </html>
+  </body>
+</html>
