--- a/ecclesia/oracion/franciscoDeSales.html
+++ b/ecclesia/oracion/franciscoDeSales.html
@@ -250,18 +250,16 @@
       <p>    
         <p>Afirma que la devoción no arruina nada bueno, sino que mejora todas las cosas:	<br>
           Afirma que la devoción no arruina nada bueno, sino que mejora todas las cosas:	<br>
-Hace al amor más puro,	<br>
-El trabajo más justo,	<br>
-El matrimonio más santo,	<br>
-Y la vida en general, más plena y alegre.	<br>
-	<br>
-	<br>
-Este capítulo es una defensa preciosa de la vida devota en el mundo real. Nos anima a ver que:	<br>
-La devoción no es una huida del mundo, sino una forma de santificarlo.	<br>
-No está reñida con la alegría ni con el buen humor.	<br>
-Quien vive con Dios en el corazón, puede ser más feliz, más fuerte y más humano.	<br>
-San Francisco rompe con la imagen del cristiano triste o agobiado. ¡Al contrario! Para él, la verdadera devoción alegra el alma, embellece la vida y fortalece el corazón.	<br>
-<br><br></p>
+          Hace al amor más puro,	<br>
+          El trabajo más justo,	<br>
+          El matrimonio más santo,	<br>
+          Y la vida en general, más plena y alegre.	<br> <br>
+          Este capítulo es una defensa preciosa de la vida devota en el mundo real. Nos anima a ver que:	<br>
+          La devoción no es una huida del mundo, sino una forma de santificarlo.	<br>
+          No está reñida con la alegría ni con el buen humor.	<br>
+          Quien vive con Dios en el corazón, puede ser más feliz, más fuerte y más humano.	<br>
+          San Francisco rompe con la imagen del cristiano triste o agobiado. ¡Al contrario! Para él, la verdadera devoción alegra el alma, embellece la vida y fortalece el corazón.	<br>
+          <br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
