--- a/ecclesia/liturgia/misa.html
+++ b/ecclesia/liturgia/misa.html
@@ -1075,17 +1075,71 @@ Pésaj es una festividad tanto religiosa como comunitaria, que reafirma la liber
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
-       <li><details class="select">
-        <summary>Comunión</summary>
-        <ol>
-           <li>	84. El sacerdote se prepara para recibir fructuosamente el Cuerpo y la Sangre de Cristo con una oración en secreto. Los fieles hacen lo mismo orando en silencio.</li>
-           <li>SE reza Mt 8,8</li>
-          <p> 86. Mientras el sacerdote toma el Sacramento, se inicia el canto de Comunión, que debe expresar, por la unión de las voces, la unión espiritual de quienes comulgan, manifestar el gozo del corazón y esclarecer mejor la índole “comunitaria” de la procesión para recibir la Eucaristía. </p>
-           <li>Se señala un momento de silencio para que podamos hacer conciencia de a Quién hemos recibido</li>
-           <p>88. Terminada la distribución de la Comunión, si resulta oportuno, el sacerdote y los fieles oran en silencio por algún intervalo de tiempo. Si se quiere, la asamblea entera también puede cantar un salmo u otro canto de alabanza o un himno.</p>
-           <br>
-           <li>	Oración después de la Comunión: Oración de agradecimiento por los dones recibidos.</li>
-           <p>89. Para terminar la súplica del pueblo de Dios y también para concluir todo el rito de la Comunión, el sacerdote dice la oración después de la Comunión, en la que se suplican los frutos del misterio celebrado.</p>
+  <li><details class="select">
+  <summary>Comunión</summary>
+  <ol>
+      <li>	84. El sacerdote se prepara para recibir fructuosamente el Cuerpo y la Sangre de Cristo con una oración en secreto. Los fieles hacen lo mismo orando en silencio.</li>
+      <li>SE reza Mt 8,8</li>
+    <p> 86. Mientras el sacerdote toma el Sacramento, se inicia el canto de Comunión, que debe expresar, por la unión de las voces, la unión espiritual de quienes comulgan, manifestar el gozo del corazón y esclarecer mejor la índole “comunitaria” de la procesión para recibir la Eucaristía. </p>
+      <li>Se señala un momento de silencio para que podamos hacer conciencia de a Quién hemos recibido</li>
+      <p>88. Terminada la distribución de la Comunión, si resulta oportuno, el sacerdote y los fieles oran en silencio por algún intervalo de tiempo. Si se quiere, la asamblea entera también puede cantar un salmo u otro canto de alabanza o un himno.</p>
+      <br>
+      <li>	Oración después de la Comunión: Oración de agradecimiento por los dones recibidos.</li>
+      <p>89. Para terminar la súplica del pueblo de Dios y también para concluir todo el rito de la Comunión, el sacerdote dice la oración después de la Comunión, en la que se suplican los frutos del misterio celebrado.</p>
+      <h3>Oración de Santo Tomás de Aquino</h3>
+      <p>"Gracias te doy, Señor Santo, Padre todopoderoso, Dios eterno, 	<br>
+      porque a mí, pecador, indigno siervo tuyo, sin mérito alguno de mi parte, 	<br>
+      sino por pura concesión de tu misericordia,	<br>
+        te has dignado alimentarme 	<br>
+        con el precioso Cuerpo y Sangre de tu Unigénito Hijo mi Señor Jesucristo. 	<br>
+        Suplícote, que esta Sagrada Comunión no me sea ocasión de castigo, 	<br>
+        sino intercesión saludable para el perdón; 	<br>
+        sea armadura de mi fe, escudo de mi voluntad, 	<br>
+        muerte de todos mis vicios, exterminio de todos mis carnales apetitos, 	<br>
+        y aumento de caridad, paciencia y verdadera humildad, 	<br>
+        y de todas las virtudes: sea perfecto sosiego de mi cuerpo y de mi espíritu, 	<br>
+        firme defensa contra todos mis enemigos visibles e invisibles, 	<br>
+        perpetua unión contigo, único y verdadero Dios, 	<br>
+        y sello de mi muerte dichosa. 	<br>
+        Ruégote, que tengas por bien llevar a este pecador a aquel convite inefable,	<br>
+        donde Tú, con tu Hijo y el Espíritu Santo, 	<br>
+        eres para tus santos luz verdadera, satisfacción cumplida,	<br>
+          gozo perdurable, dicha consumada y felicidad perfecta. 	<br>
+          Por el mismo Cristo Nuestro Señor. Amén."	<br>
+      <h3>Oración de San Buenaventura</h3>
+      <p> "Traspasa, dulcísimo Jesús y Señor mío, 	<br>
+        la médula de mi alma con el suavísimo 	<br>
+        y saludabilísimo dardo de tu amor; 	<br>
+        con la verdadera, pura y santísima caridad apostólica,	<br>
+          a fin de que mi alma desfallezca 	<br>
+          y se derrita siempre sólo en amarte 	<br>
+          y en deseo de poseerte: que por Ti suspire,	<br>
+          y desfallezca por hallarse en los atrios de tu Casa; 	<br>
+          anhele ser desligada del cuerpo para unirse contigo. 	<br>
+            <br>
+          Haz que mi alma tenga hambre de Ti, 	<br>
+          Pan de los Ángeles, alimento de las almas santas,	<br>
+            Pan nuestro de cada día, lleno de fuerza, 	<br>
+            de toda dulzura y sabor, y de todo suave deleite.	<br>
+            <br>
+            Oh Jesús, en quién se desean mirar los Ángeles: 	<br>
+            tenga siempre mi corazón hambre de Ti, 	<br>
+            y el interior de mi alma rebose con la dulzura de tu sabor; 	<br>
+            tenga siempre sed de Ti, fuente de vida, 	<br>
+            manantial de sabiduría y de ciencia, río de luz eterna, 	<br>
+            torrente de delicias, abundancia de la Casa de Dios:	<br>
+            que te desee, te busque, te halle; 	<br>
+            que a Ti vaya y a Ti llegue; 	<br>
+            en Ti piense, de Ti hable, 	<br>
+            y todas mis acciones encamine a honra y gloria de tu nombre, 	<br>
+            con humildad y discreción, con amor y deleite,	<br>
+              con facilidad y afecto, con perseverancia hasta el fin:	<br>
+              para que Tú sólo seas siempre mi esperanza, 	<br>
+              toda mi confianza, mi riqueza, mi deleite,	<br>
+                mi contento, mi gozo, mi descanso	<br>
+                y mi tranquilidad, mi paz."	<br>
+</p>
+</p>
         
      <h3 class="cita">Que significa "hostia"</h3>
        <p> 
@@ -1101,11 +1155,162 @@ Pésaj es una festividad tanto religiosa como comunitaria, que reafirma la liber
             En resumen, la palabra hostia significa "víctima" u "ofrenda", y en el cristianismo católico se refiere al pan consagrado que representa y es, según la fe, el Cuerpo de Cristo en la Eucaristía.<br><br></p>
           </details></li>
               <!-- ****************************** -->
+               <h3 class="cita">Notas</h3>
+               <h3>Recepción de la Comunión</h3>
               <li><details class="select">
-                <summary></summary>
-                <p><br><br></p>
+                <summary>En la historia</summary>
+                <p> ¿Cómo recibieron los Apóstoles la Eucaristía en la Última Cena?	<br>
+Aunque los Evangelios no describen detalles exactos, lo más probable es que:	<br>
+Jesús les dio el pan en la mano: en la cultura judía era normal tomar el pan con la mano durante la cena pascual.	<br>
+Estaban sentados o reclinados, no de rodillas.	<br>
+No había todavía formas litúrgicas establecidas como hoy.	<br>
+ “Jesús tomó el pan, lo partió y se lo dio…” (cf. Mt 26,26)	<br>
+ Por tanto, es muy probable que la primera forma de recibir la comunión fue en la mano.	<br>
+	<br>
+ ¿Y en la Iglesia antigua?	<br>
+En los primeros siglos del cristianismo (siglos I al IV):	<br>
+Se comulgaba en la mano.	<br>
+Los fieles formaban una especie de trono con las manos: una mano sobre otra (como hacemos hoy).	<br>
+A veces se colocaba un paño blanco para que no cayeran fragmentos.	<br>
+San Cirilo de Jerusalén (s. IV) dice:	<br>
+ “Cuando te acerques a recibir la comunión, no extiendas las palmas ni separes los dedos; sino haz con tu mano izquierda un trono para la derecha, que ha de recibir al Rey.”
+— Catequesis Mistagógica V, 21-22	<br>
+	<br>
+ ¿Cuándo cambió y por qué?	<br>
+A partir del siglo VI-VII:	<br>
+La Iglesia empezó a introducir la comunión en la boca.	<br>
+Motivos:	<br>
+Aumentar la reverencia al Cuerpo de Cristo.	<br>
+Evitar la pérdida de fragmentos de la hostia.	<br>
+Prevenir abusos o profanaciones.	<br>
+Refuerzo del sentido de lo sagrado y del sacerdocio ministerial.	<br>
+ La comunión en la boca no fue una ruptura, sino una evolución pastoral para proteger mejor el sacramento.	<br>
+	<br>
+En la Edad Media:	<br>
+Se hizo la norma universal en Occidente.	<br>
+De rodillas también se fue introduciendo como forma de adoración y humildad.	<br>
+	<br>
+ ¿Cuándo se permitió de nuevo en la mano?	<br>
+Después del Concilio Vaticano II:	<br>
+Algunos países pidieron a la Santa Sede permitir la comunión en la mano.	<br>
+En 1969, Pablo VI autorizó su uso donde el episcopado lo pidiera y la Santa Sede lo aprobara.	<br>
+Hoy en día, ambas formas están permitidas.	<br>
+<br><br></p>
               </details></li>
               <!-- ****************************** -->
+              <li><details class="select">
+                <summary>Normas liturgicas de la Iglesia</summary>
+                <p> ¿Cómo debe recibirse la Comunión?	<br>
+La norma general es que la Iglesia permite ambas formas: en la boca o en la mano, de pie o de rodillas, según la disposición del lugar y la elección libre del fiel.	<br>
+	<br>
+ Normas litúrgicas principales	<br>
+ 1. En la mano o en la boca	<br>
+La forma tradicional es en la boca.	<br>
+La práctica de recibir la Comunión en la boca no fue establecida originalmente por una norma específica, sino que surgió como una expresión del sensus fidei (el sentido de fe de los fieles) y de la evolución de la devoción eucarística en la Iglesia. Con el tiempo, esta práctica se consolidó como una tradición en la Iglesia Occidental, especialmente durante la Edad Media, cuando aumentó la reverencia hacia la Eucaristía y se buscó evitar cualquier riesgo de profanación. <br><br>
+El concepto de sensus fidei (sentido de la fe) es un don del Espíritu Santo que permite a los fieles discernir y adherirse a las verdades de la fe. Este concepto ha sido explorado en profundidad en documentos como el de la Comisión Teológica Internacional sobre el sensus fidei en la vida de la Iglesia, publicado en 2014. Este texto explica cómo el sensus fidei ha influido en el desarrollo de la doctrina y las prácticas cristianas a lo largo de la historia. <br><br>
+En cuanto a documentos explícitos, el primer texto oficial que aborda la posibilidad de recibir la Comunión en la mano en tiempos modernos es la instrucción Memoriale Domini de 1969, emitida por la Sagrada Congregación para el Culto Divino. Este documento establece que, aunque la práctica tradicional es recibir la Comunión en la boca, se permite recibirla en la mano en lugares donde las conferencias episcopales lo hayan aprobado con el consentimiento de la Santa Sede.
+	<br><br>
+En la mayoría de países (incluyendo los de habla hispana), ya está autorizado.	<br>
+ “Cada uno de los fieles tiene siempre el derecho a recibir la sagrada Comunión en la lengua.”
+— Instrucción Redemptionis Sacramentum, n. 92	<br>
+ “Donde se permite la comunión en la mano, el fiel puede escoger si la recibe en la lengua o en la mano.”
+— Instrucción General del Misal Romano (IGMR), n. 161	<br>
+	<br>
+2. De pie o de rodillas	<br>
+Ambas posturas son válidas, pero lo más común hoy es recibirla de pie, haciendo una inclinación antes de comulgar.	<br>
+De rodillas es totalmente lícito y nadie puede prohibirlo.	<br>
+ “No se debe negar la sagrada Comunión a ningún fiel por el solo hecho de querer recibirla de rodillas o en la lengua.”
+— Redemptionis Sacramentum, n. 91	<br>
+ “Donde es costumbre recibir de pie, hágase un gesto de reverencia antes de comulgar.”
+— IGMR, n. 160	<br>
+	<br>
+ ¿Qué debe cuidar el fiel al comulgar?	<br>
+Si se recibe en la mano:	<br>
+Debe ponerse la mano izquierda sobre la derecha (o al revés si es zurdo).	<br>
+Recibir al Señor con reverencia.	<br>
+Consumir la hostia delante del ministro, no caminando o llevándola a otro lugar.	<br>
+Revisar que no queden fragmentos en la mano.	<br>
+Si se recibe en la boca:	<br>
+Abrir bien la boca y sacar ligeramente la lengua.	<br>
+Hacerlo con devoción y sin apresurarse.	<br>
+<br><br></p>
+              </details></li>
+              <!-- ****************************** -->
+                <li><details class="select">
+          <summary>El Pan Azimo y Con Levadura</summary>
+          <p> 1. PAN ÁZIMO (Sin levadura)	<br>
+ Usado en:	<br>
+Iglesia Católica Latina (rito romano).	<br>
+ Fundamento bíblico:	<br>
+Jesús celebró la Última Cena en el contexto de la Pascua judía, donde solo se comía pan sin levadura, recordando la salida apresurada de Egipto (Éxodo 12,15).	<br>
+ Simbolismo:	<br>
+Pureza: sin levadura, sin corrupción ni fermentación → símbolo de Cristo sin pecado.	<br>
+Humildad y sencillez: el pan ázimo no se eleva ni infla, como Cristo “que se anonadó a sí mismo” (cf. Filipenses 2,7).	<br>
+Memoria pascual: evoca la Pascua del Éxodo y la Pascua de Jesús.	<br>
+	<br>
+ Significado eucarístico:	<br>
+Cristo como el Cordero Pascual puro y sin mancha.	<br>
+Subraya el sacrificio redentor y la inmediatez de la redención.	<br>
+	<br>
+ 2. PAN FERMENTADO (Con levadura)	<br>
+ Usado en:	<br>
+Iglesias Ortodoxas y muchas Iglesias Católicas Orientales (bizantinas, coptas, caldeas, etc.).	<br>
+ Fundamento espiritual:	<br>
+Aunque no se usó en la Última Cena pascual, el pan fermentado se conecta con otros pasajes y simbolismos.	<br>
+ Simbolismo:	<br>
+Resurrección y vida nueva: la levadura “hincha” la masa → imagen de la vida nueva y activa del Resucitado.	<br>
+Iglesia vivificada: la levadura es también símbolo del Reino de Dios (cf. Mt 13,33).	<br>
+Plenitud de la humanidad de Cristo: al usar pan normal, fermentado, se recalca que Cristo asumió plenamente nuestra humanidad.	<br>
+ Significado eucarístico:	<br>
+Subraya la victoria de Cristo Resucitado, la plenitud de vida.	<br>
+Enfatiza que la Eucaristía no es solo sacrificio, sino también alimento y comunión vivificante.	<br>
+	<br>
+ Conclusión espiritual	<br>
+El pan ázimo invita al recogimiento, a contemplar al Cordero inmolado.	<br>
+El pan fermentado llama al gozo del Resucitado y a la vida que se expande.	<br>
+ Ambos recuerdan que Cristo es el Pan vivo bajado del cielo, verdadero alimento para la vida eterna (Jn 6,51).	<br>
+	<br>
+<br><br></p>
+        </details></li>
+        <!-- ****************************** -->
+                <li><details class="select">
+          <summary>Comunión bajo una Especie</summary>
+          <p> ¿Cuál es el fundamento de comulgar bajo una sola especie?	<br>
+ 1. Cristo está entero en cada especie	<br>
+La enseñanza central de la Iglesia es que:	<br>
+ Cristo está presente total y plenamente bajo cada una de las especies.	<br>
+Esto incluye: su Cuerpo, Sangre, Alma y Divinidad.	<br>
+ Concilio de Trento (s. XVI) definió solemnemente:	<br>
+“Quien comulga solo con el pan, no recibe menos que quien comulga con el pan y el vino”.	<br>
+ Razón: Cristo resucitado y glorificado ya no puede dividirse. Él está indiviso y vivo en la Eucaristía. Por tanto, no se recibe "la mitad" de Cristo, sino todo Él.	<br>
+	<br>
+ 2. Razones pastorales e históricas	<br>
+Desde la Edad Media, para evitar peligros de derramar la Sangre de Cristo, se reservó la comunión del cáliz al sacerdote celebrante.	<br>
+También por logística y reverencia en celebraciones grandes.	<br>
+En muchos lugares del mundo, el vino no estaba fácilmente disponible o era costoso.	<br>
+ 2. Razones pastorales e históricas	<br>
+Desde la Edad Media, para evitar peligros de derramar la Sangre de Cristo, se reservó la comunión del cáliz al sacerdote celebrante.	<br>
+•	En muchos lugares del mundo, el vino no estaba fácilmente disponible o era costoso.	<br>
+•	También por logística y reverencia en celebraciones grandes.	<br>
+	<br>
+ Entonces… ¿es mejor comulgar con ambas?	<br>
+Sí, el signo es más completo:	<br>
+La forma plena del signo sacramental se ve cuando comulgamos del pan y el vino, como en la Última Cena.	<br>
+Jesús dijo: “Tomad y comed… Tomad y bebed” (Mt 26,26-27).	<br>
+Subraya el aspecto de banquete y de alianza sellada con su sangre.	<br>
+	<br>
+ ¿Qué dice la Iglesia hoy?	<br>
+ Instrucción General del Misal Romano (IGMR), n. 282:	<br>
+“Aunque la comunión bajo una sola especie… transmite toda la gracia del Sacramento, se recomienda vivamente que los fieles, si las circunstancias lo permiten, reciban la comunión bajo las dos especies…”	<br>
+	<br>
+<br><br></p>
+        </details></li>
+        <!-- ****************************** -->
+                <li><details class="select">
+          <summary></summary>
+          <p><br><br></p>
+        </details></li>
+        <!-- ****************************** -->
            </ol>
           
 
