--- a/ecclesia/oracion/compendioOracion.html
+++ b/ecclesia/oracion/compendioOracion.html
@@ -32,11 +32,18 @@
       <div>
         <h2 class="titulo">ENLACES A TEMAS</h2>
         <ol>
-          <li class="li">
-            <a href="./01Estacion.html">ESTACIÓN 1</a>
-          </li>
-          <li class="li"><a href="./02Estacion.html">ESTACIÓN 2</a></li>
-          <li class="li"><a href="./03Estacion.html">ESTACIÓN 3</a></li>
+          <li class="li"><a href="./01Estacion.html">PRIMA STATIO</a></li>
+          <li class="li"><a href="./02Estacion.html">SECUNDA STATIO</a></li>
+          <li class="li"><a href="./03Estacion.html">TERTIA STATIO</a></li>
+          <li class="li"><a href="./04Estacion.html">QUARTA STATIO</a></li>
+          <li class="li"><a href="./05Estacion.html">QUINTA STATIO</a></li>
+          <li class="li"><a href="./06Estacion.html">SEXTA STATIO</a></li>
+          <li class="li"><a href="./07Estacion.html">SÉPTIMA STATIO</a></li>
+          <li class="li"><a href="./08Estacion.html">OCTAVA STATIO</a></li>
+          <li class="li"><a href="./09Estacion.html">NONA STATIO</a></li>
+          <li class="li"><a href="./10Estacion.html">DÉCIMA STATIO</a></li>
+          <li class="li"><a href="./11Estacion.html">UNDÉCIMA STATIO</a></li>
+          <li class="li"><a href="./12Estacion.html">DUODÉCIMA STATIO</a></li>
         </ol>
       </div>
     </section>
