--- a/ecclesia/oracion/compendioOracion.html
+++ b/ecclesia/oracion/compendioOracion.html
@@ -48,7 +48,99 @@
       </div>
     </section>
     <!-- ************************************************************ -->
-    <section id="01"></section>
+    <section id="01">
+      <div>
+        <h2 class="titulo">STATIO</h2>
+        <ol>
+          <li>
+            <details class="select">
+              <summary>Structura</summary>
+              <ol>
+                <li>
+                  <b>INCEPTUM DOMINE</b>
+                  <br />Dios es quien tiene la iniciativa
+                </li>
+                <hr />
+                <li>
+                  <b>SCIENTIA DOMINI</b> <br />Desde lo que captamos de la
+                  iniciativa de Dios, lo conocemos y aprendemos a conocernos
+                </li>
+                <hr />
+                <li>
+                  <b>DISCERNIMENTUM: Eligere Bonum et Facere </b><br />Aprender
+                  a elegir el bien y la mejor forma de realizarlo
+                </li>
+                <hr />
+                <li>
+                  <b>ORATIO: Responsum et Directio</b><br />
+                  Respuesta a la iniciativa Divina y redirección a vida
+                  <br /><br />
+                  <ol>
+                    <h3>Responsum</h3>
+                    <li>
+                      <b> Ad gratiam apertus : </b><br />
+                      Disposición y apertura a la Gracia
+                    </li>
+                    <br />
+                    <li>
+                      <b>Propositum</b><br />
+                      Finalidad, Objetivo, meta, propósito
+                    </li>
+                    <h3>Directio</h3>
+                    <li>
+                      <b>Ducente Deo:</b><br />"Con Dios como guía"<br />
+                      Conversión(Interior) y cambio de vida(Exterior)
+                    </li>
+                    <br />
+                    <li>
+                      <b>Conversio mentis et cordis, </b> <br />cambio en la
+                      manera de pensar, sentir, creer
+                    </li>
+                    <br />
+                    <li>
+                      <b>Mutatio cordis in operibus quotidianis, </b
+                      ><br />Cambio del corazón en las obras de cada dia
+                    </li>
+                    <br />
+                    <li>
+                      <b>Renovatio morum cotidianorum, </b><br />
+                      Renovación de las costumbres diarias
+                    </li>
+                    <br />
+                  </ol>
+                  <hr />
+                </li>
+
+                <li></li>
+                <li></li>
+              </ol>
+              <p><br /><br /></p>
+            </details>
+          </li>
+          <!-- ****************************** -->
+          <li>
+            <details class="select">
+              <summary></summary>
+              <p><br /><br /></p>
+            </details>
+          </li>
+          <!-- ****************************** -->
+          <li>
+            <details class="select">
+              <summary></summary>
+              <p><br /><br /></p>
+            </details>
+          </li>
+          <!-- ****************************** -->
+          <li>
+            <details class="select">
+              <summary></summary>
+              <p><br /><br /></p>
+            </details>
+          </li>
+        </ol>
+      </div>
+    </section>
     <!-- ************************************************************ -->
   </body>
 </html>
