--- a/proof.html
+++ b/proof.html
@@ -31,7 +31,7 @@
 <div class="nota">
    <div class="cancion">
      <h1>CONTIGO APRENDÍ</h1>
-    <p><pre>  <b>G7</b>       <b>C7</b>   <b>E7</b></pre></p>
+    <p><pre>  <b>A</b>       <b>B</b>   <b>C</b></pre></p>
     <p>Contigo aprendí</p><br>
 
     <p><pre></pre></p>
@@ -48,7 +48,7 @@
       <ol>
         <li><a href="./proof.html">A</a></li>
         <li><a href="">B</a></li>
-        <li><a href="">C</a></li>
+        <li><a href="./BlockGkc.html">C</a></li>
         <li><a href="">D</a></li>
         <li><a href="">E</a></li>
         <li><a href="">F</a></li>
